--- a/public/anaylze.html
+++ b/public/anaylze.html
@@ -63,6 +63,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" href="list.html">My List</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" href="docs.html">Google Sheets</a>
+                </li>
             </div>
             <div class="col-md-1 flex justify-content-end pb-3">
                 <button id="signIn" class=" btn btn-light">Sign In</button>
