--- a/public/signIn.html
+++ b/public/signIn.html
@@ -64,6 +64,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="list.html">My List</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" href="docs.html">Google Sheets</a>
+                    </li>
                 </div>
                 <div class="col-md-1 flex justify-content-end pb-3">
                     <button id="signIn" class="btn btn-light"><a href = "signIn.html">Sign In</a></button>
