--- a/public/docs.html
+++ b/public/docs.html
@@ -154,6 +154,7 @@
                             <td>Hatch Pickup From Ground</td>
                             <td>Hatch Pickup From Human</td>
                             <td>Climb Level</td>
+                            <td>Climb Attempted</td>
                             <td>Tipped Over</td>
                             <td>Dead</td>
                         </tr>
@@ -182,6 +183,7 @@
                             <td class = "teleTable" id= "groundHatchPickup">13</td>
                             <td class = "teleTable" id= "humanHatchPickup">14</td>
                             <td class = "teleTable" id= "climbLevel">3</td>
+                            <td class="teleTable" id="zAttempt">10</td>
                             <td class = "teleTable" id= "tippedOver">false</td>
                             <td class = "teleTable" id= "dead">true</td>
                         </tr>
