--- a/public/index.html
+++ b/public/index.html
@@ -318,7 +318,7 @@
                             <div class="input-group-prepend">
                                 <label class="input-group-text" for="climbLevel"><b>Attempted Climb Level</b></label>
                             </div>
-                            <select class="custom-select text-center record" data-record="" id="attempt">
+                            <select class="custom-select text-center record" data-record="22" id="attempt">
                                 <b>
                                     <option> 1 </option>
                                     <option> 2 </option>
